add_executable(test_driver_at86rf2xx main.c)
target_link_libraries(test_driver_at86rf2xx PUBLIC RIOT::RIOT)
set(driver_default "at86rf231")
if (BOARD STREQUAL "samr21-xpro")
  set(driver_default "at86rf231")
elseif (BOARD STREQUAL "mulle")
  set(driver_default "at86rf212b")
endif()
set(RIOT_TEST_DRIVER_AT86RF2XX_MODEL "${driver_default}" CACHE STRING "The specific device to build driver_at86rf2xx tests for")
mark_as_advanced(RIOT_TEST_DRIVER_AT86RF2XX_MODEL)
riot_target_depends(test_driver_at86rf2xx PUBLIC od shell shell_commands ps ${RIOT_TEST_DRIVER_AT86RF2XX_MODEL})
riot_check_missing_modules(test_driver_at86rf2xx)
