add_executable(test_driver_bme680 main.c)
target_link_libraries(test_driver_bme680 PUBLIC RIOT::RIOT)
set(RIOT_TEST_DRIVER_BME680_MODEL "bme680_i2c" CACHE STRING "The specific device to build test_driver_bme680 for")
mark_as_advanced(RIOT_TEST_DRIVER_BME680_MODEL)
option(RIOT_TEST_DRIVER_BME680_ENABLE_FP "Enable floating-point math in test_driver_bme680")
mark_as_advanced(RIOT_TEST_DRIVER_BME680_ENABLE_FP)
riot_target_depends(test_driver_bme680 PUBLIC ${RIOT_TEST_DRIVER_BME680_MODEL} xtimer)
if (RIOT_TEST_DRIVER_BME680_ENABLE_FP)
  riot_target_depends(test_driver_bme680 PUBLIC bme680_fp)
endif()
riot_check_missing_modules(test_driver_bme680)
