add_executable(test_driver_lpsxxx main.c)
target_link_libraries(test_driver_lpsxxx PUBLIC RIOT::RIOT)
set(RIOT_TEST_DRIVER_LPSXXX_MODEL "lps331ap" CACHE STRING "The specific device to build test_driver_lpsxxx for")
mark_as_advanced(RIOT_TEST_DRIVER_LPSXXX_MODEL)
riot_target_depends(test_driver_lpsxxx PUBLIC ${RIOT_TEST_DRIVER_LPSXXX_MODEL} xtimer)
riot_check_missing_modules(test_driver_lpsxxx)
