add_executable(test_driver_mpu9x50 main.c)
set(RIOT_TEST_DRIVER_MPU9X50_MODEL "mpu9150" CACHE STRING "The specific device to build test_driver_mpu9x50 for")
mark_as_advanced(RIOT_TEST_DRIVER_MPU9X50_MODEL)
target_link_libraries(test_driver_mpu9x50 PUBLIC RIOT::RIOT)
riot_target_depends(test_driver_mpu9x50 PUBLIC ${RIOT_TEST_DRIVER_MPU9X50_MODEL} xtimer)
riot_check_missing_modules(test_driver_mpu9x50)
